# defer

./: .editorconfig  CMakeLists.txt  README.md
.github/workflows/: main.yml
include/: defer.hpp
test/: CMakeLists.txt  main.cpp
